# project_planning

./: README.md  pyproject.toml
src/project_planning/: crew.py  main.py
src/project_planning/config/: agents.yaml  tasks.yaml
src/project_planning/tools/: custom_tool.py
